[build-system]
requires = ["hatchling", "hatch-babel"]
build-backend = "hatchling.build"

[project]
name = "pytr"
version = "0.4.2"
description = "Use TradeRepublic in terminal"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
    { name = "marzzzello", email = "853485-marzzzello@users.noreply.gitlab.com" }
]
urls = { "Homepage" = "https://github.com/pytr-org/pytr" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha",
    "Topic :: Office/Business :: Financial",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = [
    "certifi",
    "coloredlogs",
    "ecdsa",
    "packaging",
    "pathvalidate",
    "pygments",
    "requests_futures",
    "shtab",
    "websockets>=14",
    "babel",
]

[project.scripts]
pytr = "pytr.main:main"

[tool.hatch.build.hooks.babel]
locale_dir = "pytr/locale"

[dependency-groups]
dev = [
    "ruff>=0.9.4",
    "pytest>=8.3.4",
    "mypy>=1.15.0",
    "types-babel>=2.11.0.15",
    "types-requests>=2.32.0.20241016",
    "types-pygments>=2.19.0.20250107",
]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
extend-select = ["I"]

[tool.mypy]
python_version = "3.9"
